# reese

./: CMakeLists.txt  LICENSE  README.md  reese_convenience_macros.h  reese_core.c  reese_core.h
include/: reese.h  reese_convenience_macros.h  reese_core.h
src/: reese_core.c
